<resources>
    <string name="app_name">iStudy</string>
    <string name="title_activity_stu_main_all">stu_main_all</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_success">login success</string>
    <string name="login">登录</string>
    <string name="Username">账号</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码?</string>
    <string name="repeat_password">确认密码</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>
    <string name="phone">电话号码</string>
    <string name="confirm">确定</string>
    <string name="verification">获取验证码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>

</resources>
