<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team9.istudy.Activity.RegisterActivity">
    <FrameLayout
        android:layout_centerInParent="true"
        android:layout_width="320dp"
        android:layout_height="550dp">
        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            app:cardBackgroundColor="#2ea67f"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/deepskyblue"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/nickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="昵称"
                            android:inputType="text"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/ID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="学号/工号"
                            android:inputType="number"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="邮箱"
                            android:inputType="textEmailAddress"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingStart="50dp"
                android:paddingEnd="30dp">
                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/male"
                        android:button="@null"
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:background="@drawable/rb_background"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:text="男"
                        android:checked="true"
                        android:textColor="@color/deepskyblue"
                        />
                    <RadioButton
                        android:id="@+id/female"
                        android:button="@null"
                        android:layout_marginLeft="25dp"
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:background="@drawable/rb_background"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:text="女"
                        android:textColor="@color/deepskyblue"
                        />
                </RadioGroup>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp">
                    <RadioGroup
                        android:id="@+id/occupation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <RadioButton
                            android:id="@+id/student"
                            android:button="@null"
                            android:layout_width="40dp"
                            android:layout_height="35dp"
                            android:background="@drawable/rb_background"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:checked="true"
                            android:text="@string/student"
                            android:textColor="@color/deepskyblue"
                            />
                        <RadioButton
                            android:id="@+id/teacher"
                            android:button="@null"
                            android:layout_marginLeft="25dp"
                            android:layout_width="40dp"
                            android:layout_height="35dp"
                            android:background="@drawable/rb_background"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:text="@string/teacher"
                            android:textColor="@color/deepskyblue"
                            />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/repeat_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/repeat_password"
                            android:inputType="textPassword"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/register"
                    android:textColor="@color/deepskyblue"></Button>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:backgroundTint="@color/deepskyblue"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            app:fabSize="normal" />
    </FrameLayout>

</RelativeLayout>